Upgrade Java source/target from 8 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Convert multiline strings to text blocks
- Migrate Paths.get to Path.of
- Update maven compiler source/target to 17
- Replace new Integer/Long/Double with valueOf