@@ -27,7 +27,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 
 class CompilationUnitTest {
@@ -42,9 +41,9 @@ class CompilationUnitTest {
     @Test
     void testGetSourceRoot() throws IOException {
         Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                .resolve(Paths.get("src", "test", "resources"))
+                .resolve(Path.of("src", "test", "resources"))
                 .normalize();
-        Path testFile = sourceRoot.resolve(Paths.get("com", "github", "javaparser", "storage", "Z.java"));
+        Path testFile = sourceRoot.resolve(Path.of("com", "github", "javaparser", "storage", "Z.java"));
 
         CompilationUnit cu = parse(testFile);
         Path sourceRoot1 = cu.getStorage().get().getSourceRoot();
@@ -55,9 +54,9 @@ class CompilationUnitTest {
     void testGetSourceRootWithBadPackageDeclaration() {
         assertThrows(RuntimeException.class, () -> {
             Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                    .resolve(Paths.get("src", "test", "resources"))
+                    .resolve(Path.of("src", "test", "resources"))
                     .normalize();
-            Path testFile = sourceRoot.resolve(Paths.get("com", "github", "javaparser", "storage", "A.java"));
+            Path testFile = sourceRoot.resolve(Path.of("com", "github", "javaparser", "storage", "A.java"));
             CompilationUnit cu = parse(testFile);
             cu.getStorage().get().getSourceRoot();
         });
@@ -66,9 +65,9 @@ class CompilationUnitTest {
     @Test
     void testGetSourceRootInDefaultPackage() throws IOException {
         Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                .resolve(Paths.get("src", "test", "resources", "com", "github", "javaparser", "storage"))
+                .resolve(Path.of("src", "test", "resources", "com", "github", "javaparser", "storage"))
                 .normalize();
-        Path testFile = sourceRoot.resolve(Paths.get("B.java"));
+        Path testFile = sourceRoot.resolve(Path.of("B.java"));
 
         CompilationUnit cu = parse(testFile);
         Path sourceRoot1 = cu.getStorage().get().getSourceRoot();
@@ -78,9 +77,9 @@ class CompilationUnitTest {
     @Test
     void testGetPrimaryTypeName() throws IOException {
         Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                .resolve(Paths.get("src", "test", "resources"))
+                .resolve(Path.of("src", "test", "resources"))
                 .normalize();
-        Path testFile = sourceRoot.resolve(Paths.get("com", "github", "javaparser", "storage", "PrimaryType.java"));
+        Path testFile = sourceRoot.resolve(Path.of("com", "github", "javaparser", "storage", "PrimaryType.java"));
         CompilationUnit cu = parse(testFile);
 
         assertEquals("PrimaryType", cu.getPrimaryTypeName().get());
@@ -96,9 +95,9 @@ class CompilationUnitTest {
     @Test
     void testGetPrimaryType() throws IOException {
         Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                .resolve(Paths.get("src", "test", "resources"))
+                .resolve(Path.of("src", "test", "resources"))
                 .normalize();
-        Path testFile = sourceRoot.resolve(Paths.get("com", "github", "javaparser", "storage", "PrimaryType.java"));
+        Path testFile = sourceRoot.resolve(Path.of("com", "github", "javaparser", "storage", "PrimaryType.java"));
         CompilationUnit cu = parse(testFile);
 
         assertEquals("PrimaryType", cu.getPrimaryType().get().getNameAsString());
@@ -107,9 +106,9 @@ class CompilationUnitTest {
     @Test
     void testNoPrimaryType() throws IOException {
         Path sourceRoot = mavenModuleRoot(CompilationUnitTest.class)
-                .resolve(Paths.get("src", "test", "resources"))
+                .resolve(Path.of("src", "test", "resources"))
                 .normalize();
-        Path testFile = sourceRoot.resolve(Paths.get("com", "github", "javaparser", "storage", "PrimaryType2.java"));
+        Path testFile = sourceRoot.resolve(Path.of("com", "github", "javaparser", "storage", "PrimaryType2.java"));
         CompilationUnit cu = parse(testFile);
 
         assertFalse(cu.getPrimaryType().isPresent());
