@@ -43,8 +43,7 @@ class PropagatingAstObserverTest {
             @Override
             public void concretePropertyChange(
                     Node observedNode, ObservableProperty property, Object oldValue, Object newValue) {
-                changes.add(String.format(
-                        "%s.%s changed from %s to %s",
+                changes.add("%s.%s changed from %s to %s".formatted(
                         observedNode.getClass().getSimpleName(), property.name().toLowerCase(), oldValue, newValue));
             }
         };
