@@ -49,6 +49,6 @@ public class CsmTextBlock implements CsmElement {
 
     @Override
     public String toString() {
-        return String.format("%s(property:%s)", this.getClass().getSimpleName(), getProperty());
+        return "%s(property:%s)".formatted(this.getClass().getSimpleName(), getProperty());
     }
 }
