@@ -94,7 +94,7 @@ public class JavaParserMethodDeclaration implements ResolvedMethodDeclaration, T
     public ResolvedParameterDeclaration getParam(int i) {
         if (i < 0 || i >= getNumberOfParams()) {
             throw new IllegalArgumentException(
-                    String.format("No param with index %d. Number of params: %d", i, getNumberOfParams()));
+                    "No param with index %d. Number of params: %d".formatted(i, getNumberOfParams()));
         }
         return new JavaParserParameterDeclaration(wrappedNode.getParameters().get(i), typeSolver);
     }
@@ -113,7 +113,7 @@ public class JavaParserMethodDeclaration implements ResolvedMethodDeclaration, T
 
     @Override
     public boolean isAbstract() {
-        return !wrappedNode.getBody().isPresent();
+        return wrappedNode.getBody().isEmpty();
     }
 
     @Override
@@ -160,8 +160,7 @@ public class JavaParserMethodDeclaration implements ResolvedMethodDeclaration, T
     @Override
     public ResolvedType getSpecifiedException(int index) {
         if (index < 0 || index >= getNumberOfSpecifiedExceptions()) {
-            throw new IllegalArgumentException(String.format(
-                    "No exception with index %d. Number of exceptions: %d", index, getNumberOfSpecifiedExceptions()));
+            throw new IllegalArgumentException("No exception with index %d. Number of exceptions: %d".formatted(index, getNumberOfSpecifiedExceptions()));
         }
         return JavaParserFacade.get(typeSolver)
                 .convert(wrappedNode.getThrownExceptions().get(index), wrappedNode);
